--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 <!-- About Section -->
 <div id = "aboutSect" class = "subSection"> 
     <h1 class = "text-center">Who are we?</h1>
-    <p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
+    <div class = "row">
+    	<div>
+	    <p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
+	    </div>
+	    <div class="col-lg-12 col-md-12 col-sm-12 col text-right">
+	    	<br>
+			<span class = "animate"><a href = "#">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
+		</div>
+	</div>
 </div>
 
 
@@ -164,7 +172,7 @@
 			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<br class = "br-left">
 					<button type="button" class ="TeamButton" href = "./index.html" target = "_blank"> 
-						Meet the Rest of Our Team <i class="fa fa-long-arrow-right"></i>
+						Meet the Rest of Our Team
 					</button>
 					
 				</p>
@@ -205,7 +213,7 @@
 
 
 	<div class="col-lg-12 col-md-12 text-center">
-		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square btn-success">Apply</button></a>
+		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square">Apply</button></a>
 	</div>
 </div>
 
