--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head lang = "en">
+        <link href="images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+        
         <!-- Set Viewport to size of device -->
         <meta name = "viewport" content = "width=device-width">
         <meta charset="UTF-8">
@@ -8,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         
-        <title>Scrolling</title>
+        <title>Cornell Consulting Club - Home</title>
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href = "css/style.css">
